--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <select class="form-control campo" name="frm_EXERCICIO" id="frm_EXERCICIO">
                                     <option value="2023" disabled value selected="">-- Aguardando selecionar instituição --</option>
                                     <option value="2023">2023</option>
-                                    <option value="2022">2022/option>
+                                    <option value="2022">2022</option>
                                     <option value="2021">2021</option>
                                     <option value="2020">2020</option>
                                     <option value="2019">2019</option>
